--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "{{name_of_lib}}",
+  "name": "solid-multiform",
   "version": "0.0.0",
-  "description": "{{desc_of_lib}}",
+  "description": "A SolidJS helper that handles multistep logic for Your uncontrolled forms.",
   "license": "MIT",
-  "author": "{{me}}",
+  "author": "weblini",
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{{me}}/{{name_of_lib}}.git"
+    "url": "git+https://github.com/weblini/solid-multiform.git"
   },
-  "homepage": "https://github.com/{{me}}/{{name_of_lib}}#readme",
+  "homepage": "https://github.com/weblini/solid-multiform#readme",
   "bugs": {
-    "url": "https://github.com/{{me}}/{{name_of_lib}}/issues"
+    "url": "https://github.com/weblini/solid-multiform/issues"
   },
   "files": [
     "dist"
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
+    "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
     "esbuild": "^0.18.15",
     "esbuild-plugin-solid": "^0.5.0",
@@ -66,8 +67,10 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.27",
     "prettier": "3.0.0",
     "solid-js": "^1.7.8",
+    "tailwindcss": "^3.3.3",
     "tsup": "^7.1.0",
     "tsup-preset-solid": "^2.0.1",
     "typescript": "^5.1.6",
@@ -76,7 +79,9 @@
     "vitest": "^0.33.0"
   },
   "keywords": [
-    "solid"
+    "solid",
+    "formdata",
+    "multistep form"
   ],
   "packageManager": "pnpm@8.6.0",
   "engines": {
